--- a/src/index.css
+++ b/src/index.css
@@ -19,48 +19,10 @@ html {
   min-height: 80rem;
 }
 
-header {
-  text-align: center;
-  margin: 3rem 0;
-}
-
-header img {
-  height: 5rem;
-  width: 10rem;
-  object-fit: cover;
-}
-
-header h1 {
-  margin: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 5rem;
-  background: linear-gradient(40deg, #ea00ff, #ea00ff, #03d5ff, #03d5ff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
-}
-
-header p {
-  margin: 0;
-  font-size: 1.25rem;
-  color: #8964b0;
-  font-family: "Roboto Condensed", sans-serif;
-}
-
 main {
   width: 90%;
   max-width: 50rem;
   margin: auto;
-}
-
-main div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-  border-radius: 6px;
-  background-color: #1b082f;
-
 }
 
 #core-concepts {
@@ -77,33 +39,32 @@ main h2 {
   color: #a18aba;
 }
 
-ul {
+#core-concepts ul {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
-  gap: 4rem;
+  gap: 2rem;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-li {
-  float: left;
+#core-concepts li {
   width: 10rem;
   text-align: center;
 }
 
-li img {
-  height: 5rem;
-  width: 10rem;
+#core-concepts li img {
+  height: 4rem;
+  width: 6rem;
   object-fit: cover;
 }
 
-li h3 {
+#core-concepts li h3 {
   margin: 0.5rem 0;
 }
 
-li p {
+#core-concepts li p {
   font-size: 0.9rem;
 }
 
@@ -111,11 +72,11 @@ li p {
   margin: 3rem auto;
 }
 
-h2 {
+#examples h2 {
   text-align: left;
 }
 
-menu {
+#examples menu {
   margin: 1rem 0;
   padding: 0;
   display: flex;
@@ -123,7 +84,7 @@ menu {
   list-style: none;
 }
 
-menu button {
+#examples menu button {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 6px;
@@ -135,12 +96,12 @@ menu button {
   transition: all 0.2s ease-in-out;
 }
 
-menu button:hover {
+#examples menu button:hover {
   background-color: #1b082f;
   color: #ebe7ef;
 }
 
-menu button.active {
+#examples menu button.active {
   background-color: #7925d3;
   color: #ebe7ef;
 }
@@ -152,16 +113,10 @@ menu button.active {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
 }
 
-h3 {
+#tab-content h3 {
   margin: 0;
 }
 
-code {
+#tab-content code {
   font-size: 1rem;
-}
-
-section {
-  width: 90%;
-  max-width: 50rem;
-  margin: auto;
 }
